# term

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  taplo.toml
.github/workflows/: flatpak.yml  publish.yml
flatpak/: io.marc.term.desktop  io.marc.term.metainfo.xml  io.marc.term.yml
src/: config.rs  main.rs  state.rs
src/components/: app.rs  panel.rs  tab_bar.rs  tab_content.rs
