[package]
name = "marcterm"
edition = "2024"
publish = true
description = "my terminal as you might have guessed by the name"
version = "0.1.10"
license = "MIT"
repository = "https://github.com/marc2332/marcterm"

[[bin]]
name = "marcterm"
path = "src/main.rs"

[dependencies]
freya = { git = "https://github.com/marc2332/freya", branch = "feat/better-drag-drop", features = [
  "terminal",
  "radio",
  "material-design",
  "icons",
] }
freya-performance-plugin = { git = "https://github.com/marc2332/freya", branch = "feat/better-drag-drop" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
futures = "0.3"
async-io = "2"

[target.'cfg(target_os = "linux")'.dependencies]
xcursor = "0.3"
